# semantica-

./: .gitignore  FINETUNE_USAGE.md  README.md  cli.py  pyproject.toml  requirements.txt  sample_products.csv  setup.py  test_sample_data.py
app/: gradio_app.py
scripts/: 0.26.0  README.md  cli.py  compare_models.py  finetune.py  monitor_training.py
semantica/: __init__.py  data_loader.py  embeddings.py  llm_adapters.py  metrics.py
src/semantica/: embeddings.py  reranker.py  retriever.py
tests/: test_llm_reranker.py  test_metrics.py
